<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AdminFragment"
    android:background="@color/material_dynamic_neutral95">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp">
        <TextView
            android:id="@+id/adminName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="name: "
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <EditText
            android:id="@+id/adminNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/adminName"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/white"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/adminPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="price: "
            app:layout_constraintTop_toBottomOf="@id/adminNameInput"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/adminPriceInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="0.0"
            app:layout_constraintTop_toBottomOf="@id/adminPrice"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/white"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/adminDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Description: "
            app:layout_constraintTop_toBottomOf="@id/adminPriceInput"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/adminDescriptionInput"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:layout_constraintTop_toBottomOf="@id/adminDescription"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/white"
            android:textSize="20sp"
            android:textAlignment="gravity"
            android:gravity="top"/>
        <TextView
            android:id="@+id/adminCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Category: "
            app:layout_constraintTop_toBottomOf="@id/adminDescriptionInput"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"/>
        <Spinner
            android:id="@+id/adminCategorySpinner"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintTop_toBottomOf="@id/adminCategory"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="20sp"
            android:background="@color/white"/>
        <ImageButton
            android:id="@+id/adminSubmit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/adminCategorySpinner"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/add"
            android:layout_marginTop="20dp"/>
        
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>